--- a/home-assistant-voice.yaml
+++ b/home-assistant-voice.yaml
@@ -1491,7 +1491,7 @@ audio_dac:
 micro_wake_word:
   id: mww
   models:
-    - model: okay_nabu
+    - model: https://github.com/kahrendt/microWakeWord/releases/download/okay_nabu/okay_nabu.json
       id: okay_nabu
     - model: hey_jarvis
       id: hey_jarvis
