Update external component repo url (#225)

--- a/home-assistant-voice.yaml
+++ b/home-assistant-voice.yaml
@@ -1499,7 +1499,7 @@ voice_kit:
 external_components:
   - source:
       type: git
-      url: https://github.com/esphome/voice-kit
+      url: https://github.com/esphome/home-assistant-voice-pe
       ref: dev
     components:
       - aic3204
