Bugfix: Avoid crashing when started without internet access (#262)
* use bugfixed http update component externally

* set external component refresh

--- a/home-assistant-voice.yaml
+++ b/home-assistant-voice.yaml
@@ -1515,6 +1515,9 @@ external_components:
       - voice_assistant
       - voice_kit
     refresh: 0s
+  - source: github://pr#8018
+    components: [http_request]
+    refresh: 0s
 
 audio_dac:
   - platform: aic3204
