Add restart button to home-assistant-voice.yaml (#273)
Co-authored-by: Tudor Sandu <tm.sandu@gmail.com>
Co-authored-by: JLo <github.papyrus@mail.jlpouffier.fr>

--- a/home-assistant-voice.yaml
+++ b/home-assistant-voice.yaml
@@ -1663,6 +1663,12 @@ button:
     name: "Factory Reset"
     entity_category: diagnostic
     internal: true
+  - platform: restart
+    id: restart_button
+    name: "Restart"
+    entity_category: config
+    disabled_by_default: true
+    icon: "mdi:restart"
 
 debug:
   update_interval: 5s
